--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 
 debug=true
 
-server.address=0.0.0.0
+server.address=192.168.64.1
 server.port=9001
+
+
+spring.servlet.multipart.max-file-size=102400KB
+spring.servlet.multipart.max-request-size=102400KB
